force-app/main/default/objects/Opportunity/fields/Additional_Requirement_Note__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirement_Note__c</fullName>
    <label>Additional Requirement Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>