force-app/main/default/objects/Opportunity/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <inlineHelpText>Enter the amount of the Administration Fee in the form of a percent.</inlineHelpText>
    <label>Admin Fee%</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>