force-app/main/default/objects/Opportunity/fields/Admin_Fee_Product__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Product__c</fullName>
    <label>Admin Fee Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>