force-app/main/default/objects/Opportunity/fields/Agent_Admin_Fee_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Admin_Fee_Commission__c</fullName>
    <formula>Agent_Commission__c  *  Admin_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Admin Fee Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>