force-app/main/default/objects/Opportunity/fields/Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission__c</fullName>
    <label>Agent Commission</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>