force-app/main/default/objects/Opportunity/fields/Broker_Agent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Contact record for the External Broker/Agent that submitted the opportunity</inlineHelpText>
    <label>Broker/Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>