force-app/main/default/objects/Opportunity/fields/Broker_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agreement__c</fullName>
    <formula>text(Broker_Agent__r.Signed_Trion_Broker_Agreement__c )</formula>
    <label>Broker Contract Agreement Status</label>
    <type>Text</type>
</CustomField>