force-app/main/default/objects/Opportunity/fields/Broker_Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Sales_Commission__c</fullName>
    <formula>Total_Broker_Commission__c  *  Proposal__r.Trion_Admin_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>