force-app/main/default/objects/Opportunity/fields/Business_Info_Received__c.field-meta.xml
<CustomField>
    <fullName>Business_Info_Received__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Account.Business_Type__c)),
NOT(ISBLANK( Account.Federal_ID_Number__c )),
NOT(ISBLANK(TEXT(Account.Entity_Type__c))) ,
NOT(ISBLANK( Account.Business_Establishment_Date__c ))),TRUE, FALSE)</formula>
    <label>Business Info Received</label>
    <type>Checkbox</type>
</CustomField>