force-app/main/default/objects/Opportunity/fields/Client_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Client_Documents_Received__c</fullName>
    <formula>IF(
Required_Documents_Received__c = TRUE,
&quot;Documents: &quot; +  BR() + IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;),
&quot;Documents: &quot; +  BR() +IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;))</formula>
    <label>Documents</label>
    <type>Text</type>
</CustomField>