force-app/main/default/objects/Opportunity/fields/Client_Employee_Details__c.field-meta.xml
<CustomField>
    <fullName>Client_Employee_Details__c</fullName>
    <formula>IF(
State_Comp_Info_Received__c = TRUE,
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;))&amp; &quot; &quot; &amp; BR() &amp; &quot; &quot; &amp;
Proposal__r.Deal_Type__c  &amp; BR()&amp;
&quot;# of Employees: &quot; &amp;&quot;  &quot; &amp; text(  Proposal__r.Total_of_Employees__c  ) &amp; BR()&amp;
&quot;Total Wages:   &quot; &amp; &quot;$&quot;&amp;text(  Proposal__r.Total_Gross_Wages__c  )</formula>
    <label>Client Employee Details</label>
    <type>Text</type>
</CustomField>