force-app/main/default/objects/Opportunity/fields/Closed_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Loss_Reason__c</fullName>
    <label>Closed Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Comparison</fullName>
            </value>
            <value>
                <fullName>Benefits Cost</fullName>
            </value>
            <value>
                <fullName>Carrier Declined</fullName>
            </value>
            <value>
                <fullName>Cost/Pricing</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor Pricing</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor Product Offering</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor Service Model</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Stayed with current PEO</fullName>
            </value>
            <value>
                <fullName>Stayed with current process</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>