force-app/main/default/objects/Opportunity/fields/Current_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Policy_Expiration_Date__c</fullName>
    <inlineHelpText>Enter the client&apos;s current policy expiration date.</inlineHelpText>
    <label>Current Policy Expiration Date</label>
    <type>Date</type>
</CustomField>