force-app/main/default/objects/Opportunity/fields/manual_premium__c.field-meta.xml
<CustomField>
    <fullName>manual_premium__c</fullName>
    <label>Manual Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>