force-app/main/default/objects/Opportunity/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <defaultValue>0.0145</defaultValue>
    <label>Medicare</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>