force-app/main/default/objects/Opportunity/fields/New_Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if the company is a new business</inlineHelpText>
    <label>New Business Entity</label>
    <type>Checkbox</type>
</CustomField>