force-app/main/default/objects/Opportunity/fields/No_Loss_Affidative__c.field-meta.xml
<CustomField>
    <fullName>No_Loss_Affidative__c</fullName>
    <label>No Loss Affidative</label>
    <summaryFilterItems>
        <field>Submission_Requirement__c.Requirement_Type__c</field>
        <operation>equals</operation>
        <value>No Loss Affidavit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Submission_Requirement__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Submission_Requirement__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>