force-app/main/default/objects/Opportunity/fields/NumberofEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberofEmployees__c</fullName>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>