force-app/main/default/objects/Opportunity/fields/of_Requirements__c.field-meta.xml
<CustomField>
    <fullName>of_Requirements__c</fullName>
    <label># of Requirements</label>
    <summaryForeignKey>Submission_Requirement__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>