force-app/main/default/objects/Opportunity/fields/Opportunity_Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total_Commission__c</fullName>
    <label>Opportunity Total Commission %</label>
    <summarizedField>Sales_Commission__c.Commission__c</summarizedField>
    <summaryForeignKey>Sales_Commission__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>