force-app/main/default/objects/Opportunity/fields/Payroll_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Start_Date__c</fullName>
    <label>Payroll Start Date</label>
    <type>Date</type>
</CustomField>