force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>IF(
 Primary_Contact_Info__c  = TRUE,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;))&amp; &quot; &quot; &amp; BR() &amp; &quot; &quot; &amp;
&quot;Primary Contact: &quot;&amp;   Primary_Contact_First_Name__c &amp; &quot; &quot; &amp;  Primary_Contact_Last_Name__c &amp; br()&amp;
&quot;Title: &quot; &amp;  Primary_Contact_Title__c &amp; br()&amp;
&quot;Email: &quot;+&quot; &quot;+&quot; &quot; &amp;   Primary_Contact_Email__c  &amp;br()&amp;
&quot;Phone:  &quot; &amp;   Primary_Contact_Phone__c</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>