force-app/main/default/objects/Opportunity/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <label>Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>