force-app/main/default/objects/Opportunity/fields/Primary_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact Info</label>
    <type>Checkbox</type>
</CustomField>