force-app/main/default/objects/Opportunity/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Title__c</fullName>
    <label>Primary Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>