force-app/main/default/objects/Opportunity/fields/Quote_Requirement_Flow_Executed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Requirement_Flow_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Requirement Flow Executed</label>
    <type>Checkbox</type>
</CustomField>