force-app/main/default/objects/Opportunity/fields/Required_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents_Received__c</fullName>
    <formula>AND(
Total_Required__c  &gt; 0,
Requirements_Submitted__c =  Total_Required__c)</formula>
    <label>Required Documents Received</label>
    <type>Checkbox</type>
</CustomField>