force-app/main/default/objects/Opportunity/fields/Requirements_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Submitted__c</fullName>
    <label># Requirements Submitted</label>
    <summaryFilterItems>
        <field>Submission_Requirement__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Submission_Requirement__c.Required_Optional__c</field>
        <operation>equals</operation>
        <value>Required</value>
    </summaryFilterItems>
    <summaryForeignKey>Submission_Requirement__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>