force-app/main/default/objects/Opportunity/fields/Signed_Contract_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Received_Date__c</fullName>
    <label>Signed Contract Received Date</label>
    <type>Date</type>
</CustomField>