force-app/main/default/objects/Opportunity/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <defaultValue>0.062</defaultValue>
    <label>Social Security</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>