force-app/main/default/objects/Opportunity/fields/State_Comp_Info__c.field-meta.xml
<CustomField>
    <fullName>State_Comp_Info__c</fullName>
    <formula>IMAGE(
IF(  State_Comp_Info_Received__c  = TRUE,
&quot;/servlet/servlet.FileDownload?file=015m0000001p2AP&quot;,
&quot;/servlet/servlet.FileDownload?file=015m0000001p2Ae&quot;
),
&apos;Enter Some Text Here&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Comp</label>
    <type>Text</type>
</CustomField>