force-app/main/default/objects/Opportunity/fields/State_Comp_Info_Received__c.field-meta.xml
<CustomField>
    <fullName>State_Comp_Info_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State/Comp Info_Received</label>
    <type>Checkbox</type>
</CustomField>