force-app/main/default/objects/Opportunity/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <formula>Trion_Agent_Commission__c + Broker_Sales_Commission__c + Trion_Sales_Manager_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>