force-app/main/default/objects/Opportunity/fields/Total_MRC_for_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC_for_Employees__c</fullName>
    <label>All Total MRC for Employees</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>