force-app/main/default/objects/Opportunity/fields/Total_Required__c.field-meta.xml
<CustomField>
    <fullName>Total_Required__c</fullName>
    <label># Required</label>
    <summaryFilterItems>
        <field>Submission_Requirement__c.Required_Optional__c</field>
        <operation>equals</operation>
        <value>Required</value>
    </summaryFilterItems>
    <summaryForeignKey>Submission_Requirement__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>