force-app/main/default/objects/Opportunity/fields/Total_Sales_Manager_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Manager_Commission__c</fullName>
    <label>Total Sales Manager Commission %</label>
    <summarizedField>Sales_Commission__c.Commission__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Commission__c.Role__c</field>
        <operation>equals</operation>
        <value>Sales Manager</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Commission__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>