force-app/main/default/objects/Opportunity/fields/Trion_Sales_Manager_Commission__c.field-meta.xml
<CustomField>
    <fullName>Trion_Sales_Manager_Commission__c</fullName>
    <formula>Total_Sales_Manager_Commission__c  *  Proposal__r.Trion_Admin_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trion Sales Manager Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>