force-app/main/default/objects/Opportunity/fields/Underwriting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Comments__c</fullName>
    <label>Underwriting Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>