force-app/main/default/objects/Opportunity/fields/UW_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>UW_Decline_Reason__c</fullName>
    <label>UW Decline Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inadequate business experience</fullName>
            </value>
            <value>
                <fullName>Frequency/severity of historical losses</fullName>
            </value>
            <value>
                <fullName>Inadequate Premium</fullName>
            </value>
            <value>
                <fullName>Class code is ineligible for the program</fullName>
            </value>
            <value>
                <fullName>Volatile State/Claims Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Inadequate Expected Charge Rates</fullName>
            </value>
            <value>
                <fullName>Excessive amount of exposure</fullName>
            </value>
            <value>
                <fullName>Fraudulent Client Info</fullName>
            </value>
            <value>
                <fullName>Client exposure requires FAC</fullName>
            </value>
            <value>
                <fullName>Requires 24 hr WC coverage</fullName>
            </value>
            <value>
                <fullName>Inadequate Financial Position</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>