force-app/main/default/objects/Opportunity/fields/W_C_Carrier__c.field-meta.xml
<CustomField>
    <fullName>W_C_Carrier__c</fullName>
    <label>W/C Carrier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>