force-app/main/default/objects/Opportunity/fields/zdel_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>zdel_Gross_Wages__c</fullName>
    <label>zGross Wages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>