force-app/main/default/objects/Opportunity/recordTypes/Trion_Default.recordType-meta.xml
<RecordType>
    <fullName>Trion_Default</fullName>
    <active>true</active>
    <businessProcess>Trion Sales Process</businessProcess>
    <label>Trion Default</label>
</RecordType>