force-app/main/default/objects/Opportunity/validationRules/Account_Info_Reqd_for_Opp_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Info_Reqd_for_Opp_Creation</fullName>
    <active>false</active>
    <description>Val. rule to prevent creating an opportunity when account billing street, city, state, zip code, and phone are blank.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; 
(ISBLANK(Account.BillingCity) || 
ISBLANK(Account.BillingStreet) || 
ISBLANK(Account.BillingPostalCode) || 
ISBLANK(Account.BillingState) || 
ISBLANK(Account.Phone))</errorConditionFormula>
    <errorMessage>You cannot create an opportunity when account billing street, city, state, zip code, and phone are blank. Open the account in another window, enter all the required info, then come back and save this record.</errorMessage>
</ValidationRule>