force-app/main/default/objects/Opportunity/validationRules/New_Opportunities.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Opportunities</fullName>
    <active>true</active>
    <description>Requires Prospecting stage upon creating new opportunity.</description>
    <errorConditionFormula>AND(
ISNEW(),NOT(ISPICKVAL(StageName, &quot;Prospecting&quot;)))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>New opportunity stage must start at Prospecting.</errorMessage>
</ValidationRule>