force-app/main/default/objects/Opportunity/listViews/ALL_Past_Due_Opportunities.listView-meta.xml
<ListView>
    <fullName>ALL_Past_Due_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Previous_Stage__c</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Gross_Wages__c</columns>
    <columns>Requirements_Submitted__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Trion_Default</value>
    </filters>
    <label>ALL Past Due Opportunities</label>
    <sharedTo>
        <group>Sales_Office</group>
        <group>Underwriting</group>
    </sharedTo>
</ListView>