force-app/main/default/objects/Opportunity/listViews/My_Past_Due_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Past_Due_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Previous_Stage__c</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Gross_Wages__c</columns>
    <columns>Requirements_Submitted__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Trion_Default</value>
    </filters>
    <label>My Past Due Opportunities</label>
</ListView>